rounded rems, fix for horizontal scroll

--- a/src/components/articles.scss
+++ b/src/components/articles.scss
@@ -1,6 +1,6 @@
 .article {
     width: 100%;
-    padding: 0.87rem;
+    padding: 0.875rem;
     display: flex;
     flex-direction: column;
     background: $color-white;
@@ -19,14 +19,14 @@
 
         @media(min-width:75rem) {
             font-size: 1.125rem;
-            padding-bottom: 0.7rem;
+            padding-bottom: 0.625rem;
         }
     }
 
     .article-heading {
         font-size: 0.875rem;
         text-transform: capitalize;
-        padding-bottom: 0.87rem;
+        padding-bottom: 0.875rem;
 
         @media(min-width:75rem) {
             font-size: 1.625rem;
@@ -51,7 +51,7 @@
         margin-top: 3.25rem;
         font-weight: 300;
         border-top: 0.125rem solid $color-gray;
-        padding-top: 0.4rem;
+        padding-top: 0.375rem;
         line-height: 1;
 
         @media(min-width:75rem) {
