--- a/src/components/swiper.scss
+++ b/src/components/swiper.scss
@@ -9,18 +9,18 @@
         justify-content: center;
 
         @media(min-width:75rem) {
-            margin-top: 1.31rem;
+            margin-top: 1.3125rem;
             justify-content: flex-start;
         }
 
         .shop-btn {
             font-size: 0.875rem;
-            padding: 0.7rem 1.5rem;
+            padding: 0.75rem 1.5rem;
             font-weight: 500;
 
             @media(min-width: 75rem) {
                 font-size: 1.125rem;
-                padding: 1rem 2.8rem;
+                padding: 1rem 2.8125rem;
                 font-weight: 600;
             }
         }
@@ -36,8 +36,8 @@
 
             @media(min-width:75rem) {
                 max-width: 47rem;
-                padding: 12.75rem 0 12.75rem 14.62rem;
-                font-size: 2.8rem;
+                padding: 12.75rem 0 12.75rem 14.625rem;
+                font-size: 2.8125rem;
                 text-align: justify;
             }
 
@@ -45,7 +45,7 @@
                 padding-bottom: 1rem;
 
                 @media(min-width: 75rem) {
-                    padding-bottom: 2.3rem;
+                    padding-bottom: 2.3125rem;
                 }
             }
         }
@@ -57,7 +57,7 @@
     display: flex;
     position: absolute;
     justify-content: center;
-    padding-bottom: 1.1rem;
+    padding-bottom: 1.125rem;
     
     @media(min-width:75rem) {
         justify-content: flex-start;
@@ -73,8 +73,8 @@
         transition: 0.3s all;
 
         @media(min-width: 75rem) {
-            width: 1.2rem;
-            height: 1.2rem;
+            width: 1.1875rem;
+            height: 1.1875rem;
         }
     }
 
@@ -91,12 +91,12 @@
     bottom: 0;
     right: 0;
     display: flex;
-    padding: 0.5rem 0.87rem;
+    padding: 0.5rem 0.875rem;
     width: 100%;
     justify-content: space-between;
 
     @media(min-width: 75rem) {
-        gap: 0.19rem;
+        gap: 0.1875rem;
         padding: 0;
         justify-content: end;
     }
