--- a/src/scss/benefits.scss
+++ b/src/scss/benefits.scss
@@ -4,11 +4,13 @@
     justify-content: center;
     padding: 1.25rem 0;
     font-size: 0.875rem;
-    margin: 0 -1.31251rem;
-    gap: 0.2rem;
+    margin: 0 -0.875rem;
+    gap: 0.1875rem;
+
     @media(min-width:75rem) {
         display: flex;
         justify-content: space-evenly;
+        margin: 0 -1.3125rem;
         padding: 2rem 0;
         gap: 0;
     }
@@ -20,6 +22,6 @@
     p {
         display: flex;
         align-items: center;
-        gap: 0.87rem;
+        gap: 0.875rem;
     }
 }
