--- a/src/scss/blog.scss
+++ b/src/scss/blog.scss
@@ -2,12 +2,12 @@
       background: #F8F9FB;
       display: flex;
       flex-direction: column;
-      padding: 0rem 1.31rem 1.3rem 1.31rem;
-      margin: 1.31rem -1.31rem;
+      padding: 1.3125rem 1.3125rem 0 1.3125rem;
+      margin: 0 -0.875rem;
 
       @media(min-width:75rem) {
-          margin: 0rem -1.31rem;
-          padding-top: 0.3rem;
+          margin: 0rem -1.3125rem;
+          padding-top: 0.3125rem;
       }
 
       h2 {
@@ -26,11 +26,11 @@
           display: flex;
           justify-content: center;
           flex-wrap: wrap;
-          gap: 0.88rem;
+          gap: 0.875rem;
 
           @media(min-width: 75rem) {
               flex-direction: row;
-              gap: 1.87rem;
+              gap: 1.875rem;
           }
       }
 
