--- a/src/scss/shop-button.scss
+++ b/src/scss/shop-button.scss
@@ -3,14 +3,14 @@
     color: $color-black;
     font-size: 0.625rem;
     font-weight: 600;
-    letter-spacing: 0.031rem;
+    letter-spacing: 0.03125rem;
     line-height: 1;
     border: 0.125rem solid $color-black;
     text-transform: uppercase;
     width: fit-content;
-    padding: 0.6rem 1rem;
+    padding: 0.625rem 1rem;
     @media(min-width: 75rem) {
-        padding: 1rem 2.8rem;
+        padding: 1rem 2.8125rem;
         font-size: 1.125rem;
     }
 }
