--- a/src/scss/specials.scss
+++ b/src/scss/specials.scss
@@ -1,7 +1,7 @@
 .specials-wrapper {
     display: flex;
     flex-direction: column;
-    gap: 2.1rem;
+    gap: 2.125rem;
     padding-bottom: 1.5rem;
 
     .featured,
